--- a/themes/automox-doc-theme/layouts/_default/single.html
+++ b/themes/automox-doc-theme/layouts/_default/single.html
@@ -3,16 +3,16 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" href="{{ .Site.BaseURL }}stylesheets/reset.css">
-     <link rel="stylesheet" href="{{ .Site.BaseURL }}stylesheets/style.css">
-     <link rel="stylesheet" href="{{ .Site.BaseURL }}stylesheets/header.css">
-     <link rel="stylesheet" href="{{ .Site.BaseURL }}stylesheets/algolia_search.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/reset.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/style.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/header.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/algolia_search.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-     <script src="{{ .Site.BaseURL }}javascripts/header.js"></script>
+     <script src="{{ .Site.BaseURL }}/javascripts/header.js"></script>
      <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
      <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
      <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
-     <script src="{{ .Site.BaseURL }}javascripts/algolia_search.js"></script>
+     <script src="{{ .Site.BaseURL }}/javascripts/algolia_search.js"></script>
 
      <title>{{ .Title }}</title>
 </head>
