--- a/public/stylesheets/algolia_search.css
+++ b/public/stylesheets/algolia_search.css
@@ -1,5 +1,27 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
 
+form.algolia {
+    display: block;
+}
+
+span.algolia-autocomplete {
+    width: 100%;
+}
+
+.sidebar .aa-input-container {
+    background-color: transparent;
+    padding: 0;
+    margin-top: -20px;
+}
+
+.sidebar .aa-input-icon {
+    left: 10px;
+}
+
+.sidebar .aa-input-close {
+    right: 10px;
+}
+
 .aa-input-container {
     position: relative;
     border-radius: 10px;
@@ -13,7 +35,7 @@
 }
 
 .aa-input-search {
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: #1a1a25;
     width: 100%;
     height: 41px;
     max-width: 647px;
@@ -27,6 +49,17 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+}
+
+.aa-dropdown-menu .aa-suggestion:hover {
+    background-color: #05709f;
+}
+
+.aa-dropdown-menu .aa-suggestion a {
+    color: #aaaaaa;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: normal;
 }
 
 .aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button, .aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
@@ -43,7 +76,7 @@
     width: 16px;
     position: absolute;
     top: 50%;
-    left: 11px;
+    left: 40px;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     fill: #00b1f8;
@@ -53,20 +86,21 @@
     color: #bbb; }
 
 .aa-dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.05);
-    border: 2px solid rgba(228, 228, 228, 0.6);
-    border-top-width: 1px;
-    font-family: "Montserrat", sans-serif;
-    width: 250px;
-    margin-top: 10px;
-    box-shadow: 4px 4px 0 rgba(241, 241, 241, 0.35);
-    font-size: 12px;
-    border-radius: 4px;
-    box-sizing: border-box; }
+    background-color: #1a1a25;
+    border: solid 1px #878d98;
+    width: 100%;
+    font-size: 18px;
+    border-radius: 0px;
+    box-sizing: border-box;
+    color: white;
+    font-family: "Avenir Next";
+    text-transform: none;
+    text-decoration: none;
+}
 
 .aa-suggestion {
     padding: 12px;
-    border-top: 1px solid rgba(228, 228, 228, 0.6);
+    border: none;
     cursor: pointer;
     -webkit-transition: .2s;
     transition: .2s;
@@ -78,8 +112,10 @@
     justify-content: space-between;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; }
-.aa-suggestion:hover, .aa-suggestion.aa-cursor {
+    align-items: center;
+}
+
+.aa-suggestion.aa-cursor {
     background-color: rgba(241, 241, 241, 0.35); }
 .aa-suggestion > span:first-child {
     color: #333; }
@@ -90,18 +126,20 @@
 .aa-suggestion > span:first-child em, .aa-suggestion > span:last-child em {
     font-weight: 700;
     font-style: normal;
-    background-color: rgba(58, 150, 207, 0.1);
+    background-color: rgba(0, 177, 248, .7);
+    color: white;
     padding: 2px 0 2px 2px; }
 
 .input-has-value .aa-input-icon {
-    opacity: 0; }
+    opacity: 0;
+}
 
 .aa-input-close {
     height: 12px;
     width: 12px;
     position: absolute;
     top: 50%;
-    right: 16px;
+    right: 40px;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     fill: #aaa;
@@ -114,12 +152,11 @@
     -webkit-transition: .2s ease-in;
     transition: .2s ease-in; }
 .input-has-value .aa-input-close:hover {
-    fill: #333; }
+    fill: #333;
+}
 
 .aa-suggestions-category {
-    border-bottom: 4px solid rgba(228, 228, 228, 0.6);
-    border-top: 4px solid rgba(228, 228, 228, 0.6);
     padding: 12px 12px;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: 600;
 }
