--- a/themes/automox-doc-theme/layouts/_default/list.html
+++ b/themes/automox-doc-theme/layouts/_default/list.html
@@ -5,10 +5,11 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/reset.css">
      <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/style.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/icomoon.css">
      <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/header.css">
+     <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/footer.css">
      <link rel="stylesheet" href="{{ .Site.BaseURL }}/stylesheets/algolia_search.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-     <script src="{{ .Site.BaseURL }}/javascripts/header.js"></script>
      <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
      <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
      <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
@@ -17,9 +18,17 @@
      <title>{{ .Title }}</title>
 </head>
 <body>
-     {{ partial "header" (dict "Kind" .Kind "Template" "List") }}
+     {{ partial "header" . }}
      {{.Content}}
-     {{ partial "hero" (dict "Kind" .Kind "Template" "List") }}
+
+     <div class="hero section">
+          <div class="container flex-container flex-column flex-align-center">
+               <h1>Documentation</h1>
+               <h2>this is the decription</h2>
+               <i class="icon-lightbulb"></i>
+               {{ partial "algolia_search" . }}
+          </div>
+     </div>
 
      <div class="documentation-section section">
           <div class="container">
@@ -28,9 +37,12 @@
                <hr>
 
                <div class="doc-squares flex-container space-between">
-                    {{ range .Pages }}
+                    {{  range where .Data.Pages.ByTitle "Type" "docs" }}
                          <a href="{{.URL}}" class="doc-link">
                               <div class="doc-square flex-align-center flex-container flex-column">
+                                   <div class="circle flex-container flex-align-center justify-content-center">
+                                        <i class="{{ .Params.iconclass }}"></i>
+                                   </div>
                                    <h4>{{ .Title }}</h4>
                                    <p>{{ .Description }}</p>
                               </div>
@@ -44,17 +56,23 @@
           <div class="container">
                <div class="doc-squares flex-container space-between">
 
-                    <a href="{{.URL}}" class="doc-link half-width">
-                         <div class="doc-square flex-align-center flex-container flex-column ">
-                              <h4>Submit a Support</h4>
-                              <p>Can’t find what you’re looking for?  Feel free to send a support request.</p>
+                    <a href="https://support.automox.com/hc/en-us" class="doc-link half-width">
+                         <div class="doc-square flex-container flex-align-center">
+                              <i class="icon-support2"></i>
+                              <div class="content flex-container flex-column justify-content-flex-start">
+                                   <h4>Submit a Support Ticket</h4>
+                                   <p>Can’t find what you’re looking for?  Feel free to send a support request.</p>
+                              </div>
                          </div>
                     </a>
 
-                    <a href="{{.URL}}" class="doc-link half-width">
-                         <div class="doc-square flex-align-center flex-container flex-column ">
-                              <h4>Frequently Asked Questions</h4>
-                              <p>This section covers some of the most frequent questions that users have while using the platform.</p>
+                    <a href="https://www.automox.com/faq" class="doc-link half-width">
+                         <div class="doc-square flex-container flex-align-center">
+                              <i class="icon-faq"></i>
+                              <div class="content flex-container flex-column justify-content-flex-start">
+                                   <h4>Frequently Asked Questions</h4>
+                                   <p>This section covers some of the most frequent questions that users have while using the platform.</p>
+                              </div>
                          </div>
                     </a>
                </div>
