--- a/themes/automox-doc-theme/static/stylesheets/style.css
+++ b/themes/automox-doc-theme/static/stylesheets/style.css
@@ -28,6 +28,14 @@
     -ms-flex-pack: center;
 }
 
+.justify-content-flex-start {
+    -webkit-justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -ms-justify-content: flex-start;
+    justify-content: flex-start;
+    -ms-flex-pack: flex-start;
+}
+
 .space-between {
     -webkit-justify-content: space-between;
     -moz-justify-content: space-between;
@@ -47,7 +55,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1280px;
     width: 100%;
     margin: 0 auto;
     padding: 0 20px;
@@ -79,6 +87,18 @@ h1, h2 {
     font-weight: 400;
 }
 
+p.description {
+    color: white;
+    text-align: center;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
+    letter-spacing: .15px;
+    margin-top: 30px;
+    margin-bottom: 0;
+    padding: 0;
+}
+
 h1 {
     font-size: 48px;
     line-height: 66px;
@@ -86,30 +106,58 @@ h1 {
     margin-top: 180px;
 }
 
-h2 {
-    font-size: 24px;
-    line-height: 33px;
-    letter-spacing: .15px;
-    margin-top: 30px;
-}
-
-h3.section-title {
+h2, p.documentation-nav {
     font-size: 24px;
     line-height: 33px;
     letter-spacing: 0.1px;
     color: #ffffff;
     padding-bottom: 10px;
-    padding-top: 50px;
+    padding-top: 40px;
     font-weight: 400;
+    text-align: left;
+    text-align: left;
 }
 
-h4.subsection-title {
+.sidebar .hide {
+    display: none;
+}
+
+p.documentation-nav {
+    padding-left: 30px;
+}
+
+p.documentation-nav:hover {
+    cursor: pointer;
+}
+
+p.documentation-nav:before {
+    box-sizing: border-box;
+    border: 1px solid #ffffff;
+    border-right: 0;
+    border-top: 0;
+    content: " ";
+    display: block;
+    height: 0.5em;
+    pointer-events: none;
+    position: absolute;
+    transform: rotate(135deg);
+    transform-origin: center;
+    width: 0.5em;
+    margin-left: -25px;
+    margin-top: 8px;
+}
+
+p.documentation-nav.hidden-menu:before {
+    transform: rotate(-45deg);
+}
+
+h3 {
     color: #ffffff;
     letter-spacing: -0.3px;
     font-size: 22px;
     line-height: normal;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 hr {
@@ -123,10 +171,34 @@ hr {
 }
 
 /* list page */
+.documentation-section {
+    padding-top: 20px;
+}
 
 .doc-squares {
     width: 100%;
     flex-wrap: wrap;
+}
+
+.circle {
+    border: 1px solid rgba(0, 177, 248, 0.4);
+    border-radius: 50%;
+    width: 82px;
+    height: 82px;
+    position: absolute;
+    margin-top: -45px;
+    background-color: #1a1b25;
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+}
+
+.circle i {
+    font-size: 40px;
+    color: rgba(0, 177, 248, 0.4);
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
 }
 
 a.doc-link {
@@ -136,16 +208,30 @@ a.doc-link {
     background-color: rgba(255, 255, 255, 0.05);
     outline-style: solid;
     outline-color: rgba(0, 177, 248, 0.4);
-    background-color: rgba(255, 255, 255, 0.05);
     transition: all .25s ease-in-out;
     -moz-transition: all .25s ease-in-out;
     -webkit-transition: all .25s ease-in-out;
+    background: #1a1b25;
 }
 
 a.doc-link:hover {
     outline-style: solid;
     outline-color: #00b1f8;
     background-color: #000000;
+}
+
+a.doc-link:hover .circle {
+    border: 2px solid #00b1f8;
+    background-color: #000000;
+}
+
+a.doc-link:hover .circle i,
+a.doc-link.half-width:hover i{
+    color: #00b1f8;
+}
+
+.doc-link.half-width .content {
+    margin-left: 30px;
 }
 
 .doc-square {
@@ -163,6 +249,11 @@ a.doc-link:hover {
     text-align: center;
 }
 
+.doc-link.half-width .doc-square h4,
+.doc-link.half-width .doc-square p {
+    text-align: left;
+}
+
 .doc-square p {
     font-size: 14px;
     color: white;
@@ -178,6 +269,15 @@ a.doc-link.half-width .doc-square {
     height: auto;
     min-height: 115px;
 }
+
+a.doc-link.half-width i {
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+    font-size: 50px;
+    color: rgba(0, 177, 248, 0.4);
+}
+
 a.doc-link.half-width .doc-square h4 {
     margin-top: 20px;
 }
@@ -189,11 +289,17 @@ a.doc-link.half-width .doc-square p {
 
 /* single page */
 
-hr.single-page {
+.main-content hr {
     margin-bottom: 40px;
 }
+
+.sidebar hr {
+    margin-bottom: 30px;
+}
+
 .main-content {
-    width: 100%
+    width: 100%;
+    padding-bottom: 70px;
 }
 .main-content p {
     color: #aaaaaa;
@@ -204,16 +310,71 @@ hr.single-page {
     padding-bottom: 20px;
 }
 
+.main-content h2,
+p.documentation-nav:first-child {
+    padding-top: 80px;
+}
+
 .sidebar {
+    display: none;
+    padding-bottom: 150px;
+}
+
+.sidebar.fixed {
+    position: fixed;
+    top: 60px;
+    right: 20px;
+    overflow-y: scroll;
+    height: 100%;
+}
+
+.doc-nav ul li {
+    line-height: normal;
+    padding-bottom: 12px;
+}
+
+.doc-nav ul li a:hover {
+    color: white;
+}
+
+.doc-nav ul.collapsed {
     display: none;
 }
 
-.doc-nav a.doc-nav-link {
+.doc-nav ul li:before {
+    display: none;
+}
+
+.doc-nav li.anchor {
+    padding-bottom: 0;
+    line-height: normal;
+}
+
+.doc-nav li.anchor a.active {
+    color: white;
+}
+
+.doc-nav a {
     color: #00b1f8;
     font-size: 14px;
     fot-weight: 400;
-    padding-bottom: 12px;
     text-decoration: none;
+}
+
+ul#scrollspy {
+    padding-top: 12px;
+}
+
+ul#scrollspy li:before {
+    display: none;
+}
+
+ul#scrollspy li {
+    padding-bottom: 12px;
+}
+
+ul#scrollspy li:last-child {
+    padding-bottom: 0;
 }
 
 .note {
@@ -233,6 +394,12 @@ hr.single-page {
     padding-bottom: 0;
 }
 
+.note.yellow .contents li{
+    color: #fddfab;
+    letter-spacing: -0.4px;
+}
+
+
 .note .contents p,
 p.no-padding {
     padding-bottom: 0;
@@ -246,10 +413,8 @@ p.no-padding {
     padding-left: 20px;
 }
 
-.note ul li:before {
-    content: '\2014';
-    position: absolute;
-    margin-left: -20px;
+.note .contents ul li {
+    font-size: 16px;
 }
 
 .note.blue {
@@ -261,42 +426,134 @@ p.no-padding {
     color: #05709f;
 }
 
-.subsection-body {
+/* subsection */
+
+.subsection {
     border-left: 1px solid #00B1F8;
     padding-left: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
-.subsection-body img {
+.subsection img {
     margin-bottom: 30px;
 }
 
-ol.decimal {
-    list-style-type: decimal;
-    color: white;
-}
-
 ol {
+    counter-reset: item;
     padding-left: 20px;
+    color: #aaaaaa;
 }
 
-ol.sub {
-   padding-left: 30px;
+ul {
+    padding-left: 20px;
+    color: #aaaaaa;
 }
 
-ol.lower-alpha {
-    list-style-type: lower-alpha;
+ul li {
+    font-size: 14px;
+    line-height: 2;
+    color: #aaaaaa
 }
 
-span.bold {
+.bullets ul li:before {
+    content: "";
+    border-color: transparent #aaaaaa;
+    border-style: solid;
+    border-width: 0.35em 0 0.35em 0.45em;
+    display: block;
+    height: 0;
+    width: 0;
+    left: -1em;
+    top: 18px;
+    position: relative;
+}
+
+.note ul li:before {
+    content: '\2014';
+    position: absolute;
+    margin-left: -20px;
+}
+
+ol li {
+    margin-bottom: 20px;
+    position: relative;
+    line-height: normal;
+}
+
+.subsection ol img,
+.subsection ul img {
+    margin-bottom: 0;
+    padding-top: 20px;
+    max-width: 100%;
+}
+
+.subsection .with-img-modal img:hover {
+    cursor: pointer;
+}
+
+.subsection ol li span img,
+.subsection ul li span img {
+    margin: 0;
+    margin-left: 20px;
+}
+
+ol li:before {
+    content: counter(item) ". ";
+    counter-increment: item;
+    color: white;
+    font-size: 18px;
+    margin-left: -20px;
+    margin-right: 5px;
+}
+
+ol li:last-child {
+    margin-bottom: 0;
+}
+
+ol ol {
+    margin-top: 20px;
+}
+
+ol ol li {
+    counter-increment: listStyle;
+}
+
+ol ol li:before {
+    content: counter(listStyle, lower-alpha) ". ";
+}
+
+.main-content ol li p {
+    padding-bottom: 0;
+    position: relative;
+    margin-top: -2px;
+}
+
+p:empty, ul:empty {
+    display:none;
+}
+
+strong {
     font-weight: 500;
     color: white;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.code-and-button {
+    position: relative;
 }
 
-p.before-code-snippet {
-    padding-bottom: 10px;
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;
 }
 
 code {
+    position: relative;
+    float: left;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.1);
     padding: 10px 100px 10px 30px;
@@ -318,10 +575,17 @@ button.copy {
     color: white;
     background-color: rgba(0, 0, 0, 0.4);
     border: solid 1px #00b1f8;
+    z-index: 1;
 }
 
-button.copy:hover {
+.code-and-button button.copy:hover {
     cursor: pointer;
+}
+
+/* table */
+
+table {
+    width: 100%;
 }
 
 table th {
@@ -331,6 +595,7 @@ table th {
     font-size: 14px;
     line-height: normal;
     padding: 10px;
+    text-align: left;
 }
 
 table td {
@@ -340,12 +605,94 @@ table td {
     padding: 10px;
 }
 
-table tr.light {
+tbody tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.05);
     border-top: solid 1px #4a4a4a;
     border-bottom: solid 1px #4a4a4a;
-
 }
+
+/* modal */
+.modal {
+    background-color: #161823;
+    border: solid 1px #979797;
+    display: block;
+    width: 1000px;
+    max-width: 100%;
+    height: 700px;
+    max-height: 100%;
+    position: fixed;
+    z-index: 100;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 60px 10px rgba(0, 0, 0, 0.9);
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+}
+
+.modal img {
+    width: 100%;
+}
+
+.closed {
+    display: none;
+}
+
+.modal-guts {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 20px 30px;
+}
+
+.modal-guts h4.image-name {
+    font-size: 24px;
+    color: white;
+    font-weight: normal;
+    letter-spacing: .56px;
+    padding-bottom: 15px;
+}
+
+.modal-guts hr {
+    width: 100%;
+    height: 1px;
+    border-style: solid;
+    border-color:  #878787;
+    border-width: 1px;
+    border-image-source: none;
+    border-image-slice: 0;
+    margin-bottom: 40px;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    background: rgba(0, 0, 0, 0.6);
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+}
+
+i.icon-close {
+    position: absolute;
+    right: 30px;
+    color: #ffffff;
+    margin-top: -10px;
+    font-size: 30px;
+}
+
+i.icon-close:hover {
+    cursor: pointer;
+}
+
 
 
 
