more footer updates

--- a/themes/automox-doc-theme/layouts/partials/footer.html
+++ b/themes/automox-doc-theme/layouts/partials/footer.html
@@ -48,7 +48,7 @@
                               <a href="{{ .Site.BaseURL }}">Documentation</a>
                          </li>
                          <li>
-                              <a href="https://www.automox.com/support">Support</a>
+                              <a href="https://support.automox.com/hc/en-us">Support</a>
                          </li>
                          <li>
                               <a href="https://www.automox.com/security">Automox Security</a>
@@ -59,7 +59,7 @@
                <div class="column">
                     <ul class="footer-list is-hidden-touch">
                          <li>
-                              <a href="https://www.automox.com/support">About Us</a>
+                              <a href="https://www.automox.com/company">About Us</a>
                          </li>
                          <li>
                               <a href="https://www.automox.com/careers">Careers</a>
