--- a/themes/automox-doc-theme/static/stylesheets/style.css
+++ b/themes/automox-doc-theme/static/stylesheets/style.css
@@ -66,6 +66,7 @@ body {
     background: #0a0a0a;
     background-image: url("/img/hero-min.png");
     background-size: cover;
+    background-position: center;
     padding-bottom: 200px;
 }
 
