--- a/themes/automox-doc-theme/layouts/partials/footer.html
+++ b/themes/automox-doc-theme/layouts/partials/footer.html
@@ -67,6 +67,9 @@
                          <li>
                               <a href="https://www.automox.com/blog">Blog</a>
                          </li>
+                         <li>
+                              <a href="mailto:info@automox.com">Contact</a>
+                         </li>
                     </ul>
 
                     <div class="social-icons flex-container">
