--- a/themes/automox-doc-theme/layouts/partials/header.html
+++ b/themes/automox-doc-theme/layouts/partials/header.html
@@ -40,6 +40,7 @@
             <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link">Contact</a>
                 <div class="navbar-dropdown flex-container flex-column">
+                    <a href="mailto:info@automox.com" class="navbar-item">Email</a>
                     <a href="https://www.facebook.com/automox" class="navbar-item">Facebook</a>
                     <a href="https://twitter.com/automoxapp" class="navbar-item">Twitter</a>
                     <a href="https://www.linkedin.com/company/automox" class="navbar-item">LinkedIn</a>
@@ -48,10 +49,10 @@
         </div>
 
         <div class="navbar-end">
-            <div class="navbar-item">
+            <div class="navbar-item not-hoverable">
                 <a class="button" href="https://www.automox.com/signup">Try It For Free</a>
             </div>
-            <a class="navbar-item" href="https://console.automox.com/login" id="sign-in"> Sign in </a>
+            <a class="navbar-item not-hoverable" href="https://console.automox.com/login" id="sign-in"> Sign in </a>
         </div>
     </div>
 
