--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,6 +1,7 @@
-<div class='note {{ .Get "color" }} container-flex flex-align-center'>
-    <i class="icon-info icon-2x"> </i>
-    <div class="contents">
+<div class='note {{ .Get "color" }} flex-container flex-align-center'>
+    <i class="icon-note"> </i>
+
+    <div class="contents ">
         <p class="title">{{ .Get "title" }}</p>
         <p>{{ printf "%s" .Inner | markdownify }}</p>
     </div>
