--- a/layouts/shortcodes/prerequisites.html
+++ b/layouts/shortcodes/prerequisites.html
@@ -1,5 +1,5 @@
-<div class='note prerequisites {{ .Get "color" }} container-flex flex-align-center'>
-    <i class="icon-info icon-2x"> </i>
+<div class='note prerequisites {{ .Get "color" }} flex-container flex-align-center'>
+    <i class="icon-checklist"></i>
     <div class="contents">
         <p class="title">{{ .Get "title" }}</p>
         {{ printf "%s" .Inner | markdownify }}
