--- a/themes/automox-doc-theme/static/stylesheets/algolia_search.css
+++ b/themes/automox-doc-theme/static/stylesheets/algolia_search.css
@@ -11,7 +11,7 @@ span.algolia-autocomplete {
 .sidebar .aa-input-container {
     background-color: transparent;
     padding: 0;
-    margin-top: -20px;
+    margin-top: 0;
 }
 
 .sidebar .aa-input-icon {
