--- a/themes/automox-doc-theme/static/stylesheets/style.css
+++ b/themes/automox-doc-theme/static/stylesheets/style.css
@@ -36,6 +36,14 @@
     -ms-flex-pack: flex-start;
 }
 
+.justify-content-flex-end {
+    -webkit-justify-content: flex-end;
+    -moz-justify-content: flex-end;
+    -ms-justify-content: flex-end;
+    justify-content: flex-end;
+    -ms-flex-pack: flex-end;
+}
+
 .space-between {
     -webkit-justify-content: space-between;
     -moz-justify-content: space-between;
@@ -108,7 +116,7 @@ h1 {
 }
 
 h2, p.documentation-nav {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 33px;
     letter-spacing: 0.1px;
     color: #ffffff;
@@ -155,7 +163,7 @@ p.documentation-nav.hidden-menu:before {
 h3 {
     color: #ffffff;
     letter-spacing: -0.3px;
-    font-size: 22px;
+    font-size: 18px;
     line-height: normal;
     padding-bottom: 20px;
     padding-top: 30px;
@@ -294,6 +302,10 @@ a.doc-link.half-width .doc-square p {
 
 /* single page */
 
+.main-content.full-width {
+    width: 100%;
+}
+
 .main-content hr {
     margin-bottom: 40px;
 }
@@ -347,7 +359,7 @@ a.headerlink {
     margin-right: 20px;
     bottom: 50px;
     width: inherit;
-    max-width: 404px;
+    max-width: 340px;
 }
 
 .scrollable {
@@ -613,6 +625,7 @@ code {
 }
 
 button.copy {
+    opacity: 0;
     position: absolute;
     top: 0;
     right: 0;
@@ -622,6 +635,15 @@ button.copy {
     background-color: rgba(0, 0, 0, 0.4);
     border: solid 1px #00b1f8;
     z-index: 1;
+}
+
+.code-and-button:hover {
+    cursor: pointer;
+}
+
+.code-and-button.display-button button.copy,
+button.copy.display-button {
+    opacity: 1;
 }
 
 .code-and-button button.copy:hover {
@@ -750,10 +772,10 @@ i.icon-close:hover {
 
     /* single page */
     .main-content {
-        width: calc(65% - 30px);
+        width: calc(70% - 30px);
     }
     .sidebar {
-        width: calc(35% - 30px);
+        width: calc(30% - 30px);
         display: block;
     }
 }
