show code button on hover

--- a/layouts/shortcodes/code.html
+++ b/layouts/shortcodes/code.html
@@ -1,4 +1,4 @@
-<div class="code-and-button">
+<div class="code-and-button" onmouseenter="">
     <button class="copy">Copy</button>
 
     {{ printf "%s" .Inner | markdownify }}
